                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 12-05-2006 changed: removed hardcoded ip's. a DNS server is now required for all internet access in xbmc.
 - 12-05-2006 fixed: my programs always regenerated thumbs.
 - 12-05-2006 fixed: xbmc would crash when video finished playing over SMB.
 - 11-05-2006 changed: default log set to NOTICE instead of ERROR.
 - 07-05-2006 added: daap protocol to add network location dialog.
 - 07-05-2006 added: shoutcast, last.fm, soundtracks and replaytv to add media source.
 - 07-05-2006 changed: moved screenshot-, recordings-, playlists- and trainerpaths from xboxmediacenter.xml.
 - 07-05-2006 fixed: Progressdialog would popup repeatadly when retreiving a large shoutcast directory.
 - 07-05-2006 changed: Rss feed setup to UserData\RssFeeds.xml
                       Keymap.xml to UserData\Keymap.xml
                       System\LCD.xml to UserData\LCD.xml
                       System\Partymode.xml to UserData\Partymode.xml
 - 07-05-2006 changed: Removed old thumb code.
 - 07-05-2006 changed: Background thumb loader for My Programs + changed My Programs + Kai thumb location.
 - 06-05-2006 fixed: Crash in my music if an action in the contextmenu caused the listing to change and the previous selected index was out of range in the new listing.
 - 06-05-2006 fixed: Insane shoutcast memory usage. (now uses 256KB instead of 5MB internally)
 - 06-05-2006 changed: you can now alter trainer settings while kai is running. upon launch you will be asked to choose between kai and trainers.
 - 06-05-2006 changed: when viewing a .cbr/.cbz, move to top left corner on image change.